fix bugs | alignment in sections

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+body {
+  background-color: #f2f2f2;
+}
 /*
 
 #root {
